--- a/checkout.html
+++ b/checkout.html
@@ -282,5 +282,6 @@
     <script type='text/javascript' src='js/mini-cart.js'></script>
     <script type='text/javascript' src='js/product-data.js'></script>
     <script type='text/javascript' src='js/auth-session.js'></script>
+    <script type='text/javascript' src='js/checkout.js'></script>
 </body>
 </html>
