checkout and user profile

--- a/about-2.html
+++ b/about-2.html
@@ -124,7 +124,7 @@
                                         </span>
                                     </a>
                                     <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
-                                    <a href="#" class="user_icon_button" style="display:none;align-items:center;justify-content:center;width:34px;height:34px;border-radius:50%;background:#72b16a;color:#fff;font-size:15px;text-decoration:none;" title="User">
+                                    <a href="user-profile.php" class="user_icon_button" style="display:none;align-items:center;justify-content:center;width:34px;height:34px;border-radius:50%;background:#72b16a;color:#fff;font-size:15px;text-decoration:none;" title="User">
                                         <span class="user_initial" style="font-weight:600;">U</span>
                                     </a>
                                 </div>
