--- a/shop.html
+++ b/shop.html
@@ -105,7 +105,7 @@
                                         </span>
                                     </a>
                                     <a href="login.html" class="top_panel_login_button sc_button sc_button_style_filled sc_button_size_small" style="padding:6px 14px;">Login / Register</a>
-                                    <a href="#" class="user_icon_button sc_button sc_button_style_border sc_button_size_small" style="padding:6px 10px;display:none;align-items:center;justify-content:center;border-radius:50%;width:34px;height:34px;" title="Account">
+                                    <a href="user-profile.php" class="user_icon_button sc_button sc_button_style_border sc_button_size_small" style="padding:6px 10px;display:none;align-items:center;justify-content:center;border-radius:50%;width:34px;height:34px;" title="Account">
                                         <span class="user_initial" style="font-weight:600;">U</span>
                                     </a>
                                 </div>
