admin login remap

--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                   <button type="submit">Login</button>
                   <label style="font-size:12px;display:flex;align-items:center;gap:4px;"><input type="checkbox"/> Remember me</label>
                 </div>
-                <div class="small-note"><a href="#">Forgot password?</a> · <a href="admin-login.php">Admin login</a></div>
+                <div class="small-note"><a href="#">Forgot password?</a></div>
               </form>
               <form id="registerForm" class="auth-form" autocomplete="on">
                 <div class="field"><label for="reg_first_name">First Name</label><input id="reg_first_name" name="first_name" type="text" required /></div>
@@ -152,7 +152,9 @@
         if(!res.ok || !data.success){
           throw new Error(data.error || 'Login failed');
         }
-        window.location.href = 'index.html';
+        // If user is admin, route to admin dashboard; otherwise go to site
+        const isAdmin = data && data.user && (parseInt(data.user.is_admin || 0, 10) === 1);
+        window.location.href = isAdmin ? 'admin-dashboard.php' : 'index.html';
       })
       .catch(err=>{
         alert(err.message || 'Login failed');
